# sandbox

./: .gitignore  README.md
catching-async-exceptions/: CHANGELOG.md  catching-async-exceptions.cabal
catching-async-exceptions/app/: Main.hs
chimeric-ledgers/: package.yaml
computing-abstract-sizes/: package.yaml  stack.yaml
computing-abstract-sizes/src/: Example.hs
dangling-connections/: .gitignore  README.md  dangling-connections.cabal  stack.yaml
dangling-connections/app/: Main.hs
dangling-connections/src/: Cheater.java  Client.java  Lib.hs  Reader.java
deriving-via/: .stylish-haskell.yaml  package.yaml  stack.yaml
deriving-via/src/: DerivingQuickCheckInstances.lhs
doubly-linked/: CHANGELOG.md  README.md  doubly-linked.cabal  package.yaml  stack.yaml
doubly-linked/src/: Lib.hs
dynamic-typeclasses-instances-reflection/: CHANGELOG.md  dynamic-typeclasses-instances-reflection.cabal
dynamic-typeclasses-instances-reflection/app/: Main.hs
file-traversals/: package.yaml
fp-in-scala-in-haskell/: LICENSE  README.org  fp-in-scala-in-haskell.cabal
fp-in-scala-in-haskell/bench/: Chapter03Bench.hs
free-monads/: free-monads.cabal  stack.yaml
free-monads/src/: CloudFiles.hs  CloudFilesByBart.hs  CloudFilesExceptions.hs  CloudFilesStream.hs  ModernFPWithMTL.hs  TestDSL.hs  TestDSLExceptions.hs  TestDSLGADTs.hs  TestDSLGADTs2.hs  Toy.hs
haddock-re-exports/: README.md  haddock-re-exports.cabal
haddock-re-exports/app/: Main.hs
haddock-re-exports/src/: A.hs  B.hs  Lib.hs
happy-monadic/: README.md  happy-monadic.cabal
happy-monadic/app/: Main.hs
happy-monadic/src/: Calc.y  Lexer.x
haskell-extensions/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
hedgehog-sm-echo/: package.yaml  stack.yaml
hedgehog-sm-echo/src/: Echo.hs  EchoMVar.hs  EchoTVar.hs  EchoTVarWrong.hs
hedgehog-sm-echo/test/: EchoSpec.hs
hedgehog-vs-qc/: .gitignore  package.yaml  stack.yaml
hello-haskell-stack/: .gitignore  README.md  hello-haskell-stack.cabal  snapcraft.yaml  stack.yaml
hello-haskell-stack/src/: Lib.hs
incremental-envs/: .gitignore  ChangeLog.md  LICENSE  README.md  package.yaml
incremental-envs/src/: CookingWithTypes.hs  Lib.hs
introspectable/: README.md  introspectable.cabal
introspectable/src/: Introspectable.hs
io-sim-by-example/: cabal.project  cabal.project.local  io-sim-by-example.cabal
io-sim-by-example/app/: Main.hs
io-sim-by-example/src/Examples/Control/Monad/IOSim/: Basics.hs
io-sim-by-example/test/: Main.hs
learning-platform/: README.org  learning-platform.cabal
learning-platform/src/: LearningPlatformMTL.hs
leaves-of-a-tree/: README.md  leaves-of-a-tree.cabal  stack.yaml
leaves-of-a-tree/app/: Main.hs
leaves-of-a-tree/bench/: LeavesOfATreeBench.hs
leaves-of-a-tree/src/Data/: BinTree.hs
lenses-for-adts-example/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
lenses-for-adts-example/src/: SimpleADTs.hs
lookups-memory-usage/: .gitignore  lookups-memory-usage.cabal
lookups-memory-usage/src/: Main.hs
monadic-counter/: LICENSE  README.org  monadic-counter.cabal  stack.yaml
monadic-counter-scala-remix/: .gitignore  README.org  build.sbt
monadic-counter/src/: Counter.hs
multithreading-in-java/: Spawner.java
on-dependency-injection-in-fp/: on-dependency-injection-in-fp.org
on-dependency-injection-in-fp/a-weather-app/: README.md  a-weather-app.cabal
on-dependency-injection-in-fp/a-weather-app/app/: Main.hs
on-dependency-injection-in-fp/a-weather-app/src/: WeatherReporterFree.hs  WeatherReporterFreeSeparated.hs  WeatherReporterFunctions.hs  WeatherReporterFunctionsAndMonads.hs  WeatherReporterMTL.hs  WeatherReporterMTLFailedExperiment.hs
profiling/: CHANGELOG.md  LICENSE  README.md  package.yaml  profiling.cabal
profiling/app/: Main.hs
profiling/src/: Lib.hs
pw-fix/: package.yaml
pw-lenses/: README.md  pw-lenses.cabal  stack.yaml
pw-lenses/src/: Coercions.lhs  CompositionalZooming.hs  Config.hs  Lib.hs  WalletDB.hs
pw-pipes/: README.md  pw-pipes.cabal  stack.yaml
pw-pipes/bench/: PWPipesBench.hs
pw-pipes/src/: DirMetricsConcur.hs  DirMetricsPipes.hs  DirMetricsTurtle.hs  Lib.hs
pw-pipes/test/resources/dir0/: file00.txt  file01.txt
pw-pipes/test/resources/dir1/: file10.txt
pw-strictness/: CHANGELOG.md  README.md  package.yaml  pw-strictness.cabal  stack.yaml
pw-traversables/: README.md  pw-traversables.cabal
qcsm-echo/: package.yaml  stack.yaml
quickcheck-vs-hedgehog/: .gitignore  LICENSE  package.yaml  stack.yaml
racing-turtles/: README.md  racing-turtles.cabal  stack.yaml
random-data-generation/: README.org  random-data-generation.cabal  stack.yaml
random-data-generation/src/: Counter.hs  CounterWrong.hs
random-data-generation/src/Data/: JSON.hs
rank-n-polymorphism/: rank-n-polymorphism.cabal  rank-n-polymorphism.org
rank-n-polymorphism/src/: RandomNumbers.hs  ScottVsChurchEncoding.hs  TheSTMonad.hs
receiving-strings-via-sockets/: .gitignore  ChangeLog.md  LICENSE  README.md  package.yaml
scrapping-expressions-boilerplate/: README.md  scrapping-expressions-boilerplate.cabal
sequence-based-pbt/: package.yaml  stack.yaml
sos-to-generators/: package.yaml  stack.yaml
streaming-endpoints/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml
sum-of-products-sop/: CHANGELOG.md  README.md  package.yaml  stack.yaml  sum-of-products-sop.cabal
tagless/: .gitignore  ChangeLog.md  README.md  package.yaml  stack.yaml  tagless.org
testing-under-async-exceptions/: testing-under-async-exceptions.cabal
testing-under-async-exceptions/src/: MyLib.hs
testing-under-async-exceptions/test/: MyLibSpec.hs
the-size-of-data/: stack.yaml  the-size-of-data.cabal
the-size-of-data/src/: Main.hs
thinking-with-types/: package.yaml  stack.yaml
typelevel-computations/: README.md  stack.yaml  typelevel-computations.cabal
using-haskell-nix/: .gitignore  README.md  default.nix  haskell-nix-demo.cabal  hie.yaml  shell.nix
using-haskell-nix/nix/: sources.json
using-haskell-nix/src/: Hello.hs
using-haskell-nix/test/: Main.hs
(+123 files in other folders)
