name:                haddock-re-exports
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/capitanbatata/haddock-re-exports#readme
license:             BSD3
license-file:        LICENSE
author:              Damian Nadales
maintainer:          damian.nadales@gmail.com
copyright:           Copyright: (c) 2017 Damian Nadales
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  other-modules:       A
                     , B
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable haddock-re-exports-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , haddock-re-exports
  default-language:    Haskell2010

test-suite haddock-re-exports-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , haddock-re-exports
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/capitanbatata/haddock-re-exports
