name:                   happy-monadic
version:                0.1.0.0
synopsis:               An experiment on using custom Monads in the generated
                        Happy parsers.
license:                BSD3
build-type:             Simple
cabal-version:          >=1.10

library
  hs-source-dirs:      src    
  exposed-modules:     Calc
  build-tools:         happy
  build-depends:       base
                     , array
                     , containers
  default-language:    Haskell2010

executable happy-monadic
  hs-source-dirs:      app           
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , happy-monadic
  default-language:    Haskell2010