cabal-version: 3.0
name:          io-sim-by-example
version:       0.1.0.0
synopsis:      Examples on how to use io-sim
build-type:    Simple

test-suite test
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  default-language: Haskell2010
  main-is:          Main.hs
  build-depends:
    , base
    , contra-tracer
    , io-sim
    , io-sim-by-example
    , QuickCheck
    , tasty
    , tasty-quickcheck

  ghc-options:
    -threaded -rtsopts -Wall -Wno-unticked-promoted-constructors
    -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -Widentities -Wredundant-constraints
    -Wunused-packages

library
  hs-source-dirs:   src
  exposed-modules:  Examples.Control.Monad.IOSim.Basics
  default-language: Haskell2010
  build-depends:
    , base           >=4.14 && <4.17
    , contra-tracer
    , io-classes
    , io-sim

  ghc-options:
    -Wall -Wno-unticked-promoted-constructors -Wcompat
    -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -Widentities -Wredundant-constraints
    -Wunused-packages

executable io-sim-by-example
  hs-source-dirs: app
  main-is:        Main.hs
  build-depends:
    , base
    , contra-tracer
    , io-classes
    , io-sim
    , io-sim-by-example

  ghc-options:
    -threaded -rtsopts -Wall -Wno-unticked-promoted-constructors
    -Wcompat -Wincomplete-uni-patterns -Wincomplete-record-updates
    -Wpartial-fields -Widentities -Wredundant-constraints
    -Wunused-packages
