name:                leaves-of-a-tree
version:             0.1.0.0
synopsis:            Initial project template from stack, using hspec and quickcheck
description:         Please see README.md
homepage:            https://github.com/capitanbatata/sandbox/leaves-of-a-tree#readme
license:             GPL-3
license-file:        LICENSE
author:              Damian Nadales
maintainer:          damian.nadales@gmail.com
copyright:           2016 Damian Nadales
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.String.Strip
                     , Data.BinTree
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable leaves-of-a-tree
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , leaves-of-a-tree
  default-language:    Haskell2010

test-suite leaves-of-a-tree-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , leaves-of-a-tree
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark leaves-of-a-tree-bench
  type:             exitcode-stdio-1.0
  hs-source-dirs:   src, bench
  main-is:          LeavesOfATreeBench.hs
  build-depends:    base
                  , criterion
                  , random
  ghc-options:      -Wall
                    -O2
  default-language: Haskell2010                    

  

source-repository head
  type:     git
  location: https://github.com/capitanbatata/sandbox/leaves-of-a-tree
