name:                pw-lenses
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pw-lenses#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Config
                     , Coercions
                     , CompositionalZooming
-- TODO: remove this line and the line below:
--                     , PWPhantomsHolidays 
  build-depends:       base >= 4.7 && < 5
                     , lens
                     , mtl
                     , containers
                     , bifunctors
  default-language:    Haskell2010

executable pw-lenses-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pw-lenses
  default-language:    Haskell2010

test-suite pw-lenses-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pw-lenses
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pw-lenses
