name:                pw-pipes
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/pw-pipes#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , DirMetricsTurtle
                     , DirMetricsPipes
  build-depends:       base >= 4.7 && < 5
                     , pipes
                     , text
                     , pipes-safe
                     , dirstream
                     , directory
                     , transformers
                     , system-filepath
                     , pipes-bytestring
                     , pipes-text
                     , bytestring
                     , pipes-text
                     , turtle
                     , foldl
  default-language:    Haskell2010

executable pw-pipes-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pw-pipes
  default-language:    Haskell2010

test-suite pw-pipes-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pw-pipes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/pw-pipes
