name:                the-size-of-data
version:             0.1.0.0
synopsis:            What's the size of that data structure?
license:             Apache
author:              Damian Nadales
maintainer:          damian.nadales@gmail.com
build-type:          Simple
cabal-version:       >=1.10

test-suite size
  main-is:           Main.hs
  hs-source-dirs:    src
  type:              exitcode-stdio-1.0
  build-depends:     base >=4.11 && <5
                   , bytestring
                   , cardano-binary
                   , cardano-prelude
                   , cereal
                   , containers
                   , cryptonite
                   , memory
                   , pretty-simple
                   , text
  default-language:  Haskell2010
