name:                haskell-nix-demo
version:             0.1.0
homepage:            https://github.com/dnadales/sandbox/using-haskell-nix
author:              Damian Nadales
maintainer:          damian.nadales@gmail.com
copyright:           Copyright: (c) 2020 Damian Nadales
category:            Example
license:             BSD3
license-file:        LICENSE
extra-source-files:  README.md
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/dnadales/sandbox/

library
  hs-source-dirs:   src
  build-depends:    base >=4.7 && <5
  default-language: Haskell2010
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wredundant-constraints
                    -fno-ignore-asserts

test-suite spec
  hs-source-dirs:    test
  main-is:           Main.hs
  type:              exitcode-stdio-1.0
  ghc-options:      -Wall
                    -Wcompat
                    -Wincomplete-record-updates
                    -Wincomplete-uni-patterns
                    -Wredundant-constraints
                    -- It is always a good idea to bound the memory used by the
                    -- tests to detect potential memory leaks.
                    "-with-rtsopts=-K1m -M15m"
                    -threaded
                    -rtsopts
                    -fno-ignore-asserts
  build-depends:    base >=4.7 && <5
                  , haskell-nix-demo
  default-language: Haskell2010
